add main article and aside profile.

--- a/index.html
+++ b/index.html
@@ -33,5 +33,45 @@
     </header>
   </body>
 
+  <main>
+    <section class="main-page">
+      <article>
+        <div class="article-header">
+          <img src="assets/img/gambar1.jpg" alt="" />
+          <div class="article-info">
+            <span>05 May 2021</span>
+            <span>|</span>
+            <span>3 Comments</span>
+          </div>
+        </div>
+        <div class="article-content">
+          <h3>Data 288 Juta Penduduk Indonesia Bocor</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
+            minus excepturi maiores cupiditate, reprehenderit accusantium illo.
+            Tempora, doloremque. Recusandae minima dolorem animi harum qui hic
+            est quam vero unde ab. Lorem, ipsum dolor sit amet consectetur
+            adipisicing elit. Nesciunt fuga iure esse sint asperiores! Possimus
+            eius inventore, maiores a incidunt exercitationem earum nam nobis
+            illo, deserunt blanditiis quibusdam aut tempora iste maxime laborum
+            fugit eveniet. Perspiciatis amet error eveniet cumque.
+          </p>
+          <a href="#">Continue Reading</a>
+        </div>
+      </article>
+    </section>
+    <aside>
+      <div class="about-me">
+        <div class="aside-header">
+          <h2>ABOUT ME</h2>
+          <img src="assets/img/me.jpg" alt="" />
+        </div>
+        <div class="aside-content">
+          <p>Hello! My Name is Muhammad Hafizhuddin. I am from Indonesia</p>
+        </div>
+      </div>
+    </aside>
+  </main>
+
   <script src="assets/main.js"></script>
 </html>
