done is better than perfect.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       <nav>
         <div class="nav-item hamburger"><i class="fas fa-bars fa-2x"></i></div>
         <ul class="nav-menu">
-          <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
           <li class="nav-item"><a href="#" class="nav-link">Recent Post</a></li>
           <li class="nav-item"><a href="#" class="nav-link">About Me</a></li>
         </ul>
@@ -35,17 +37,18 @@
 
   <main>
     <section class="main-page">
-      <article>
+      <!-- MAIN ARTICLE -->
+      <article class="main-article">
         <div class="article-header">
           <img src="assets/img/gambar1.jpg" alt="" />
           <div class="article-info">
             <span>05 May 2021</span>
             <span>|</span>
-            <span>3 Comments</span>
+            <span>20 Comments</span>
           </div>
         </div>
         <div class="article-content">
-          <h3>Data 288 Juta Penduduk Indonesia Bocor</h3>
+          <h3>288 Juta Data Penduduk Indonesia Bocor</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
             minus excepturi maiores cupiditate, reprehenderit accusantium illo.
@@ -59,19 +62,98 @@
           <a href="#">Continue Reading</a>
         </div>
       </article>
+
+      <hr style="margin-bottom: 3em" />
+
+      <!-- ---------- SECONDARY ARTIKEL  ------------ -->
+      <article class="secondary-article">
+        <div class="article-header">
+          <img src="assets/img/gambar3.jpg" alt="" />
+          <div class="article-info">
+            <span>10 July 2020</span>
+            <span>|</span>
+            <span>21 Comments</span>
+          </div>
+        </div>
+        <div class="article-content">
+          <h3>Pentingkah Organisasi di Dunia IT?</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
+            minus excepturi maiores cupiditate, reprehenderit accusantium illo.
+            Tempora, doloremque. Recusandae minima dolorem animi harum qui hic
+            est quam vero unde ab. Lorem, ipsum dolor sit amet consectetur
+            adipisicing elit.
+          </p>
+          <a href="#">Continue Reading</a>
+        </div>
+      </article>
+
+      <article class="secondary-article">
+        <div class="article-header">
+          <img src="assets/img/gambar2.jpg" alt="" />
+          <div class="article-info">
+            <span>30 February 2021</span>
+            <span>|</span>
+            <span>13 Comments</span>
+          </div>
+        </div>
+        <div class="article-content">
+          <h3>Hal Yang Harus Dipersiapkan Saat Masuk Dunia Kerja</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
+            minus excepturi maiores cupiditate, reprehenderit accusantium illo.
+            Tempora, doloremque. Recusandae minima dolorem animi harum qui hic
+            est quam vero unde ab.
+          </p>
+          <a href="#">Continue Reading</a>
+        </div>
+      </article>
     </section>
+
     <aside>
+      <div class="recent-posts">
+        <h2>RECENT POST</h2>
+        <div class="recent-post">
+          <div class="aside-header">
+            <img src="assets/img/gambar2.jpg" alt="" />
+          </div>
+          <div class="aside-content">
+            <a href="#"><h4>Pentingkah Organisasi di Dunia IT?</h4></a>
+          </div>
+        </div>
+
+        <div class="recent-post">
+          <div class="aside-header">
+            <img src="assets/img/gambar3.jpg" alt="" />
+          </div>
+          <div class="aside-content">
+            <a href="#"
+              ><h4>Hal Yang Harus Dipersiapkan Saat Masuk Dunia Kerja</h4></a
+            >
+          </div>
+        </div>
+      </div>
+
       <div class="about-me">
         <div class="aside-header">
           <h2>ABOUT ME</h2>
           <img src="assets/img/me.jpg" alt="" />
         </div>
         <div class="aside-content">
-          <p>Hello! My Name is Muhammad Hafizhuddin. I am from Indonesia</p>
+          <p>
+            Hello! My Name is Muhammad Hafizhuddin and I am from Indonesia.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim,
+            voluptatibus!
+          </p>
         </div>
       </div>
     </aside>
   </main>
+
+  <footer>
+    <p>Muhammad Hafizhuddin</p>
+    <p style="color: rgb(180, 180, 180)">&copy; 2021</p>
+  </footer>
 
   <script src="assets/main.js"></script>
 </html>
